--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <name>parent</name>
     <modules>
+        <module>../utils</module>
         <module>../commons</module>
         <module>../redis</module>
         <module>../service</module>
